--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "dependencies": {
     "antd": "^3.2.3",
     "firebase": "^4.10.1",
+    "immutable": "^3.8.2",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "styled-components": "^3.1.6"
   },
   "scripts": {
