--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.2.3",
+    "axios": "^0.17.1",
     "firebase": "^4.10.1",
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
