--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^4.10.1",
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
+    "moment": "^2.22.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -23,7 +24,7 @@
     "styled-components": "^3.1.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
