--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.12",
-    "@storybook/addon-links": "^3.3.12",
-    "@storybook/react": "^3.3.12",
     "@storybook/addon-info": "^3.3.12",
-    "@storybook/addon-knobs": "^3.3.12"
+    "@storybook/addon-knobs": "^3.3.12",
+    "@storybook/addon-links": "^3.3.12",
+    "@storybook/react": "^3.3.12"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
