--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.22.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fa": "^5.0.0",
     "react-lz-editor": "^0.12.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
