--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fa": "^5.0.0",
+    "react-google-maps": "^9.4.5",
     "react-lz-editor": "^0.12.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
